Tela de dashboard feita com filtro de ano, cliente e obra

--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
         <div class="buttons">
             <button onclick="visualizarTabela()">Visualizar tabela com imagens</button>
             <button onclick="listaPos()">Lista Pós-Produção</button>
+            <button onclick="dashboard()">Dashboard</button>
         </div>
         <div class="logo">
             <button onclick="instagramImproov()">
