--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
             <button onclick="visualizarTabela()">Visualizar tabela com imagens</button>
             <button onclick="listaPos()">Lista Pós-Produção</button>
             <button onclick="dashboard()">Dashboard</button>
+            <button onclick="clientes()">Informações clientes</button>
         </div>
         <div class="logo">
             <button onclick="instagramImproov()">
