--- a/main.html
+++ b/main.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleIndex.css">
-
-    <title>Inicio</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm1Xb7btbNV33nmxv08I1X4u9QTDNIKwrMyw&s"
+        type="image/x-icon">
+        
+    <title>Improov+Flow</title>
 </head>
 
 <body>
@@ -16,19 +18,12 @@
         <span class="slider round"></span>
     </label>
     <main>
+        <h1>IMPROOV+FLOW</h1>
         <div class="buttons">
             <button onclick="visualizarTabela()">Visualizar tabela com imagens</button>
             <button onclick="listaPos()">Lista Pós-Produção</button>
             <button onclick="dashboard()">Dashboard</button>
             <button onclick="clientes()">Informações clientes</button>
-        </div>
-        <div class="logo">
-            <button onclick="instagramImproov()">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm1Xb7btbNV33nmxv08I1X4u9QTDNIKwrMyw&s"
-                    alt="Improov">
-            </button>
-
-
         </div>
     </main>
 
