Adicionado função de selecionar uma linha da tabela e mostrar o modal, podendo atualizar ou inserir os dados.

--- a/ControleComercial/index.html
+++ b/ControleComercial/index.html
@@ -85,6 +85,7 @@
                             <option value="Dezembro">Dezembro</option>
                         </select>
                     </div>
+                    <input type="text" name="idcontrole" id="idcontrole" hidden>
                     <div id="button">
                         <button type="submit" id="enviar">Adicionar</button>
                     </div>
@@ -94,6 +95,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 </body>
 
