Página com informações de clientes, para adicionar e visualizar os dados.

--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
         <div class="buttons">
             <button onclick="visualizarTabela()">Visualizar tabela com imagens</button>
             <button onclick="listaPos()">Lista Pós-Produção</button>
-            <!-- <button onclick="dashboard()">Dashboard</button>
-            <button onclick="clientes()">Informações clientes</button> -->
+            <!-- <button onclick="dashboard()">Dashboard</button> -->
+            <button onclick="clientes()">Informações clientes</button>
         </div>
     </main>
 
