--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm1Xb7btbNV33nmxv08I1X4u9QTDNIKwrMyw&s"
+        type="image/x-icon">
+
+
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Dashboard</title>
 </head>
