--- a/Acompanhamento/index.html
+++ b/Acompanhamento/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Acompanhamento</h1>
+        <h1>Testando</h1>
         <button onclick="window.location.href='../inicio.php'" id="button-sair"><i
                 class="fas fa-arrow-left"></i></button>
     </header>
