--- a/Acompanhamento/index.html
+++ b/Acompanhamento/index.html
@@ -7,6 +7,8 @@
     <title>Acompanhamento</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm1Xb7btbNV33nmxv08I1X4u9QTDNIKwrMyw&s"
+        type="image/x-icon">
     <script src="script.js" defer></script>
 </head>
 
