--- a/index.html
+++ b/index.html
@@ -12,14 +12,30 @@
         type="image/x-icon">
     <style>
         .container {
-            max-width: 400px;
+            max-width: 600px;
             margin: auto;
+        }
+
+        .video-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+            filter: blur(2px);
         }
     </style>
 </head>
 
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-
+<body class="flex items-center justify-center min-h-screen">
+    <div class="image">
+        <video autoplay muted loop class="video-bg" playsinline>
+            <source src="assets/11 MSA_SQU_Psicina.mp4" type="video/mp4">
+            Seu navegador não suporta a tag de vídeo.
+        </video>
+    </div>
     <div class="container bg-white p-8 rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
 
