adicionado o gif atualizado em todas as páginas

--- a/Acompanhamento/index.html
+++ b/Acompanhamento/index.html
@@ -14,9 +14,11 @@
 
 <body>
     <header>
-        <h1>Acompanhamento</h1>
         <button onclick="window.location.href='../inicio.php'" id="button-sair"><i
                 class="fas fa-arrow-left"></i></button>
+        <h1>Acompanhamento</h1>
+        <img src="../gif/assinatura_preto.gif" alt="" style="width: 200px;">
+
     </header>
 
     <main>
