--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </video>
     </div>
     <div class="container bg-white p-8 rounded-lg shadow-lg">
-        <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
+        <img src="gif/assinatura_preto.gif" alt="">
 
         <form action="login.php" method="post" class="space-y-4">
             <div>
@@ -60,6 +60,7 @@
             </div>
         </form>
     </div>
+
 
     <!-- CDN do Toastify JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
