Nova tela de pagamento e dashboard

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,176 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm1Xb7btbNV33nmxv08I1X4u9QTDNIKwrMyw&s"
-        type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Dashboard</title>
 </head>
 
-<body class="bg-gray-100">
+<body>
 
-    <main class="min-h-screen">
-        <div class="bg-white p-4">
-            <img class="w-[250px]" src="../assets/ImproovFlow - logo.png" alt="">
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <h2>Flow</h2>
+
+        <nav>
+            <button>
+                <i class="fa-solid fa-house"></i>
+                <span>Home</span>
+            </button>
+            <button>
+                <i class="fa-solid fa-list"></i>
+                <span>Projetos</span>
+            </button>
+            <a href="../Pagamento/index.php">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <span>Pagamentos</span>
+            </a>
+        </nav>
+
+        <div id="logout">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            <span>Sair</span>
         </div>
+    </div>
 
-        <!-- Main content -->
-        <div class="md:col-span-4 p-4">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
-                <div class="bg-white p-6 rounded-lg shadow-md border-l-4 border-blue-500">
-                    <h3 class="font-semibold mb-2">Anual</h3>
-                    <p class="uppercase text-lg font-bold" id="earnings-anual">$1.415.090,00</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md border-l-4 border-green-500">
-                    <h3 class="font-semibold mb-2">Meta</h3>
-                    <p class="uppercase text-lg font-bold" id="earnings-meta">$1.850.000,00</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md border-l-4 border-yellow-500">
-                    <h3 class="font-semibold mb-2">Imagens</h3>
-                    <p class="uppercase text-lg font-bold" id="imagens-count">267</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md border-l-4 border-red-500">
-                    <h3 class="font-semibold mb-2">Obras</h3>
-                    <p class="uppercase text-lg font-bold" id="obras-count">18</p>
-                </div>
+    <!-- Main -->
+    <main>
+        <!-- Header -->
+        <header>
+            <h1>Boa tarde, Pedro</h1>
+
+            <p id="day"></p>
+        </header>
+
+        <!-- Gráfico -->
+        <section id="grafico">
+            <div class="header-grafico">
+                <h2>Performance</h2>
+                <select name="data" id="data">
+                    <option value="Outubro">Outubro</option>
+                </select>
             </div>
 
-            <!-- Gráficos -->
-            <div class="mt-8 grid grid-cols-3 md:grid-cols-3 gap-8">
-                <div class="col-span-2 bg-gray-200 p-4 rounded-lg mb-8">
-                    <div class="bg-blue-200 rounded-t-lg p-4 flex justify-between">
-                        <p class="text-blue-700 font-bold">Ganhos</p>
-                        <div class="filtros">
-                            <select name="filtro-grafico" id="filtro-grafico" class="text-sm p-1 rounded-xl">
-                                <option value="ano">Ano</option>
-                                <option value="mes">Mês</option>
-                            </select>
-
-                            <select name="ano" id="ano" class="text-sm p-1 rounded-xl hidden">
-                                <option value="2024">2024</option>
-                                <option value="2023">2023</option>
-                                <option value="2022">2022</option>
-                            </select>
-
-                            <select name="mes" id="mes" class="text-sm p-1 rounded-xl hidden">
-                                <option value="janeiro">Janeiro</option>
-                                <option value="fevereiro">Fevereiro</option>
-                                <option value="marco">Março</option>
-                                <option value="abril">Abril</option>
-                                <option value="maio">Maio</option>
-                                <option value="junho">Junho</option>
-                                <option value="julho">Julho</option>
-                                <option value="agosto">Agosto</option>
-                                <option value="setembro">Setembro</option>
-                                <option value="outubro">Outubro</option>
-                                <option value="novembro">Novembro</option>
-                                <option value="dezembro">Dezembro</option>
-                            </select>
-                        </div>
-
-                    </div>
-                    <canvas id="earnings-canvas" class="bg-white rounded-b-lg"></canvas>
-                </div>
-
-                <div class="bg-gray-200 p-4 rounded-lg">
-                    <div class="bg-red-200 rounded-t-lg p-4">
-                        <p class="text-red-700 font-bold">Obras</p>
-                    </div>
-                    <canvas id="obras-canvas" class="bg-white rounded-b-lg"></canvas>
-                </div>
-            </div>
-        </div>
-        </div>
+            <canvas id="graph"></canvas>
+        </section>
     </main>
+    <script src="script.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../script/scriptDashboard.js"></script>
-
-    <script>
-        const ctxEarnings = document.getElementById('earnings-canvas').getContext('2d');
-        const earningsChart = new Chart(ctxEarnings, {
-            type: 'line', // Tipo de gráfico (linha)
-            data: {
-                labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'], // Rótulos do eixo X
-                datasets: [{
-                    label: 'Ganhos', // Nome da linha
-                    data: [100000, 195200, 1350, 154250, 384300, 50000, 183400, 153560, 193030, 0, 0, 0], // Dados do gráfico
-                    borderColor: '#42f595',
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderWidth: 2,
-                    fill: true,
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-
-        // Dados para o gráfico de Obras
-        var ctx = document.getElementById('obras-canvas').getContext('2d');
-        var obraTotal = 100000; // Exemplo de valor total da obra
-        var funcoes = {
-            "Caderno": 15000,
-            "Modelagem": 20000,
-            "Composição": 25000,
-            "Finalização": 30000,
-            "Pós-Produção": 10000
-        };
-
-        var funcoesLabels = Object.keys(funcoes);
-        var funcoesValores = Object.values(funcoes);
-
-        // Adiciona o valor total da obra na frente das funções
-        funcoesLabels.unshift('Valor Total');
-        funcoesValores.unshift(obraTotal);
-
-        var graficoObras = new Chart(ctx, {
-            type: 'pie', // Pode mudar para 'pie' para gráfico de pizza
-            data: {
-                labels: funcoesLabels,
-                datasets: [{
-                    label: 'Valores por Função',
-                    data: funcoesValores,
-                    backgroundColor: [
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-    </script>
 </body>
 
 </html>
