--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1,68 +1,89 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Gráfico de Custos por Obra</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <title>Dashboard</title>
+    <!-- Script do Slick -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <h2>Flow</h2>
-
-        <nav>
-            <button>
-                <i class="fa-solid fa-house"></i>
-                <span>Home</span>
-            </button>
-            <button>
-                <i class="fa-solid fa-list"></i>
-                <span>Projetos</span>
-            </button>
-            <a href="../Pagamento/index.php">
-                <i class="fa-solid fa-dollar-sign"></i>
-                <span>Pagamentos</span>
-            </a>
-        </nav>
-
-        <div id="logout">
-            <i class="fa-solid fa-right-from-bracket"></i>
-            <span>Sair</span>
-        </div>
-    </div>
-
-    <!-- Main -->
     <main>
-        <!-- Header -->
-        <header>
-            <h1>Boa tarde, Pedro</h1>
+        <div class="sidebar">
+            <div class="top">
+                <p>Improov</p>
+            </div>
+            <div class="content">
+                <input type="text" name="" id="" placeholder="Pesquise...">
 
-            <p id="day"></p>
-        </header>
-
-        <!-- Gráfico -->
-        <section id="grafico">
-            <div class="header-grafico">
-                <h2>Performance</h2>
-                <select name="data" id="data">
-                    <option value="Outubro">Outubro</option>
-                </select>
+                <div class="nav">
+                    <a href="#" id="dashboard"><i class="fa-solid fa-chart-line"></i>Dashboard</a>
+                    <a href="projetos.html" id="projects"><i class="fa-solid fa-list-check"></i>Projetos</a>
+                    <a href="#" id="colabs"><i class="fa-solid fa-users"></i>Colaboradores</a>
+                </div>
             </div>
 
-            <canvas id="graph"></canvas>
-        </section>
-    </main>
-    <script src="script.js"></script>
+        </div>
+        <div class="main-content">
+            <!-- Cabeçalho do Dashboard -->
+            <div class="dashboard-header">
+                <h1>Dashboard</h1>
+            </div>
 
+            <!-- Seção de Estatísticas -->
+            <div class="stats-container">
+                <!-- Total da Empresa -->
+                <div class="stat-card">
+                    <h2>Total da Empresa ($)</h2>
+                    <p>$15,000</p>
+                </div>
+
+                <!-- Obras Ativas -->
+                <div class="stat-card">
+                    <h2>Obras Ativas</h2>
+                    <p>7</p>
+                </div>
+
+                <!-- Clientes Ativos -->
+                <div class="stat-card">
+                    <h2>Clientes Ativos</h2>
+                    <p>12</p>
+                </div>
+            </div>
+
+            <!-- Gráfico (área para inserir gráficos) -->
+            <div class="chart-container">
+                <h2 class="chart-title">Desempenho Financeiro</h2>
+                <canvas id="financialChart" width="400" height="200"></canvas>
+            </div>
+        </div>
+        <!-- <canvas id="myChart" width="400" height="200"></canvas> -->
+    </main>
+
+    <!-- <div class="carousel">
+    </div>
+
+    <div id="obraModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2 id="obraTitulo"></h2>
+            <p id="obraDetalhes"></p>
+        </div>
+    </div> -->
+
+    <script src="script/script.js"></script>
 </body>
 
 </html>
