tela principal com valores

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -47,20 +47,19 @@
                 <!-- Total da Empresa -->
                 <div class="stat-card">
                     <h2>Total da Empresa ($)</h2>
-                    <p>$15,000</p>
+                    <p id="total_orcamentos"></p>
+                </div>
+                <div class="stat-card">
+                    <h2>Total da Empresa - Produção ($)</h2>
+                    <p id="total_producao"></p>
                 </div>
 
                 <!-- Obras Ativas -->
                 <div class="stat-card">
                     <h2>Obras Ativas</h2>
-                    <p>7</p>
+                    <p id="obras_ativas"></p>
                 </div>
 
-                <!-- Clientes Ativos -->
-                <div class="stat-card">
-                    <h2>Clientes Ativos</h2>
-                    <p>12</p>
-                </div>
             </div>
 
             <!-- Gráfico (área para inserir gráficos) -->
@@ -83,7 +82,7 @@
         </div>
     </div> -->
 
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
